# camel

./: .gitignore  README.md  mix.exs
lib/: camel.ex  ellem.ex
native/camel/: Cargo.toml  README.md
native/camel/src/: auto_model.rs  camel.rs  context.rs  generate.rs  lib.rs  load.rs
native/ellem/: Cargo.toml  README.md
native/ellem/src/: camel.rs  lib.rs
test/: camel_test.exs  ellem_test.exs
