[package]
name = "camel"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "camel"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.7.0"
rustler = "0.29.1"
llm = { git = "https://github.com/rustformers/llm", branch = "main", features = [
    "models",
    "metal",
] }
llm-base = { git = "https://github.com/rustformers/llm.git", branch = "main" }
rand = "0.8.5"
num_cpus = "1.16.0"
