[package]
name = "ellem"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "ellem"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.7.0"
rustler = "0.29.1"
llm = { git = "https://github.com/rustformers/llm", branch = "main", features = [
    "models",
    "metal",
] }
